finish add new data into DetailedAttendanceReport print and review, fix issue into MainTable component, finish EmployeeSchedule page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1107,6 +1107,8 @@
   "boilerplate.containers.Payroll.Attendance.lessAsLate": "المتمم يعامل مثل التأخير",
   "boilerplate.containers.Payroll.Attendance.lessTime": "متمم",
   "boilerplate.containers.Payroll.Attendance.LessTime": "متمم",
+  "boilerplate.containers.Payroll.Attendance.LateTime": "جزاء التاخير",
+  "boilerplate.containers.Payroll.Attendance.lateTimeMinus": "خصم التاخير",
   "boilerplate.containers.Payroll.Attendance.lessTimestartFromMin": "الوقت المتمم فى اليوم يحتسب من الدقيقة",
   "boilerplate.containers.Payroll.Attendance.Location": "الموقع",
   "boilerplate.containers.Payroll.Attendance.longitude": "خطوط العرض",
@@ -1378,6 +1380,7 @@
    "boilerplate.containers.Payroll.Attendance.type": " نوع البصمة",
    "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestCreateTitle": "إضافة طلب نسيان البصمة",
    "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestUpdateTitle": "تحديث طلب نسيان البصمة",
+   "boilerplate.containers.Payroll.Attendance.changeShift": "تغيير الوردية",
   "boilerplate.containers.Payroll.august": "أغسطس",
   "boilerplate.containers.Payroll.balance": "الرصيد",
   "boilerplate.containers.Payroll.bank": "بيانات البنك",
