--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1107,6 +1107,8 @@
   "boilerplate.containers.Payroll.Attendance.lessAsLate": "Complete treated as Delay",
   "boilerplate.containers.Payroll.Attendance.lessTime": "Less Time",
   "boilerplate.containers.Payroll.Attendance.LessTime": "Less Time",
+  "boilerplate.containers.Payroll.Attendance.LateTime": "Late Time",
+  "boilerplate.containers.Payroll.Attendance.lateTimeMinus": "Late Time Minus",
   "boilerplate.containers.Payroll.Attendance.lessTimestartFromMin": "day complete time calculated from minute",
   "boilerplate.containers.Payroll.Attendance.Location": "Location",
   "boilerplate.containers.Payroll.Attendance.longitude": "Longitude",
@@ -1378,6 +1380,7 @@
   "boilerplate.containers.Payroll.Attendance.type": "Sign Type",
   "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestCreateTitle": "Add Forgot Fingerprint Request",
   "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestUpdateTitle": "Update Forgot Fingerprint Request",
+  "boilerplate.containers.Payroll.Attendance.changeShift": "Change Shift",
   "boilerplate.containers.Payroll.august": "August",
   "boilerplate.containers.Payroll.balance": "Balance",
   "boilerplate.containers.Payroll.bank": "Bank",
