finish add ResetDeviceKey in Employee list page in menu, finish add missionName into table in DetailedAttendanceReport page, add new columns into table in MissionTrxReport page

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1381,6 +1381,9 @@
    "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestCreateTitle": "إضافة طلب نسيان البصمة",
    "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestUpdateTitle": "تحديث طلب نسيان البصمة",
    "boilerplate.containers.Payroll.Attendance.changeShift": "تغيير الوردية",
+   "boilerplate.containers.Payroll.Attendance.visitStartTime": "وقت بدء الزيارة",
+   "boilerplate.containers.Payroll.Attendance.visitEndTime": "وقت انتهاء الزيارة",
+   "boilerplate.containers.Payroll.Attendance.visitPeriod": "مدة الزيارة",
   "boilerplate.containers.Payroll.august": "أغسطس",
   "boilerplate.containers.Payroll.balance": "الرصيد",
   "boilerplate.containers.Payroll.bank": "بيانات البنك",
@@ -2115,6 +2118,7 @@
   "boilerplate.containers.Payroll.october": "أكتوبر",
   "boilerplate.containers.Payroll.of": "من",
   "boilerplate.containers.Payroll.pageUnderConstruction": "الصفحة تحت الانشاء",
+  "boilerplate.containers.Payroll.resetDeviceKey": "إعادة ضبط مفتاح الجهاز",
   "boilerplate.containers.Payroll.oldElemVal": "القيمة السابقة",
   "boilerplate.containers.Payroll.organizationName": "القسم",
   "boilerplate.containers.Payroll.organizationTree": "الهيكل التنظيمي للمنظمة",
