--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1381,6 +1381,8 @@
   "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestCreateTitle": "Add Forgot Fingerprint Request",
   "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestUpdateTitle": "Update Forgot Fingerprint Request",
   "boilerplate.containers.Payroll.Attendance.changeShift": "Change Shift",
+  "boilerplate.containers.Payroll.Attendance.visitStartTime": "Visit Start Time",
+  "boilerplate.containers.Payroll.Attendance.visitEndTime": "Visit End Time",
   "boilerplate.containers.Payroll.august": "August",
   "boilerplate.containers.Payroll.balance": "Balance",
   "boilerplate.containers.Payroll.bank": "Bank",
@@ -2115,6 +2117,7 @@
   "boilerplate.containers.Payroll.october": "October",
   "boilerplate.containers.Payroll.of": "Of",
   "boilerplate.containers.Payroll.pageUnderConstruction": "Page Under Construction",
+  "boilerplate.containers.Payroll.resetDeviceKey": "Reset Device Key",
   "boilerplate.containers.Payroll.oldElemVal": "Prev Value",
   "boilerplate.containers.Payroll.organizationName": "Section",
   "boilerplate.containers.Payroll.organizationTree": "Organization Tree",
