--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2118,6 +2118,7 @@
   "boilerplate.containers.Payroll.of": "من",
   "boilerplate.containers.Payroll.pageUnderConstruction": "الصفحة تحت الانشاء",
   "boilerplate.containers.Payroll.resetDeviceKey": "إعادة ضبط مفتاح الجهاز",
+  "boilerplate.containers.Payroll.InvalidIdNumber": "رقم البطاقة غير صحيح",
   "boilerplate.containers.Payroll.oldElemVal": "القيمة السابقة",
   "boilerplate.containers.Payroll.organizationName": "القسم",
   "boilerplate.containers.Payroll.organizationTree": "الهيكل التنظيمي للمنظمة",
