Add workflow for Transfer

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1805,6 +1805,9 @@
   "boilerplate.containers.Payroll.HumanResources.oldElemVal": "القيمة السابقة",
   "boilerplate.containers.Payroll.HumanResources.oldJob": "الوظيفة السابقة",
   "boilerplate.containers.Payroll.HumanResources.organization": "القسم",
+  "boilerplate.containers.Payroll.HumanResources.transfereDate": "تاريخ النقل",
+  "boilerplate.containers.Payroll.HumanResources.issueDate": "تاريخ اصدار القرار",
+  "boilerplate.containers.Payroll.HumanResources.notes": "ملاحظات",
   "boilerplate.containers.Payroll.HumanResources.otherDeductionElement": "عنصر تسوية الخصومات",
   "boilerplate.containers.Payroll.HumanResources.otherDeductionValue": "خصومات اخرى",
   "boilerplate.containers.Payroll.HumanResources.payTemplateName": "القالب",
