--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1804,7 +1804,10 @@
   "boilerplate.containers.Payroll.HumanResources.note": "Note",
   "boilerplate.containers.Payroll.HumanResources.oldElemVal": "Prev Value",
   "boilerplate.containers.Payroll.HumanResources.oldJob": "Prev Job",
-  "boilerplate.containers.Payroll.HumanResources.organization": "Department",
+  "boilerplate.containers.Payroll.HumanResources.organization": "Department",  
+  "boilerplate.containers.Payroll.HumanResources.transfereDate": "Transfere Date",
+  "boilerplate.containers.Payroll.HumanResources.issueDate": "Issue Date",
+  "boilerplate.containers.Payroll.HumanResources.notes": "Notes",
   "boilerplate.containers.Payroll.HumanResources.otherDeductionElement": "Deduction Element",
   "boilerplate.containers.Payroll.HumanResources.otherDeductionValue": "Other Deduction",
   "boilerplate.containers.Payroll.HumanResources.payTemplateName": "payTemplate",
