finish TransferRequest page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1771,6 +1771,12 @@
   "boilerplate.containers.Payroll.HumanResources.EmpCourseCreateTitle": "اضافة الدورات التدريبية",
   "boilerplate.containers.Payroll.HumanResources.EmpCourseUpdateTitle": "تعديل الدورات التدريبية",
   "boilerplate.containers.Payroll.HumanResources.EmpInvestigation": "التحقيق مع الموظفين",
+  "boilerplate.containers.Payroll.HumanResources.TransactionDate": "تاريخ التسجيل",
+  "boilerplate.containers.Payroll.HumanResources.decisionDate": "تاريخ القرار",
+  "boilerplate.containers.Payroll.HumanResources.Status": "الحاله",
+  "boilerplate.containers.Payroll.HumanResources.actualTransferDate": "تاريخ النقل الفعلي",
+  "boilerplate.containers.Payroll.HumanResources.createTransferRequesTitle": "اضافة طلب نقل",
+  "boilerplate.containers.Payroll.HumanResources.editTransferRequesTitle": "تعديل طلب نقل",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "كود الموظف",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "تحقيق مع موظف",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "الموظف",
