--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1771,6 +1771,12 @@
   "boilerplate.containers.Payroll.HumanResources.EmpCourseCreateTitle": "Add Employee Course",
   "boilerplate.containers.Payroll.HumanResources.EmpCourseUpdateTitle": "Update Employee Course",
   "boilerplate.containers.Payroll.HumanResources.EmpInvestigation": "Employee Investigation",
+  "boilerplate.containers.Payroll.HumanResources.TransactionDate": "Transaction Date",
+  "boilerplate.containers.Payroll.HumanResources.decisionDate": "Decision Date",
+  "boilerplate.containers.Payroll.HumanResources.Status": "Status",
+  "boilerplate.containers.Payroll.HumanResources.actualTransferDate": "Actual Transfer Date",
+  "boilerplate.containers.Payroll.HumanResources.createTransferRequesTitle": "Create Transfer Request",
+  "boilerplate.containers.Payroll.HumanResources.editTransferRequesTitle": "Edit Transfer Request",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "Employee",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "Employee Investigation",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "Employee",
