--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1777,6 +1777,8 @@
   "boilerplate.containers.Payroll.HumanResources.actualTransferDate": "تاريخ النقل الفعلي",
   "boilerplate.containers.Payroll.HumanResources.createTransferRequesTitle": "اضافة طلب نقل",
   "boilerplate.containers.Payroll.HumanResources.editTransferRequesTitle": "تعديل طلب نقل",
+  "boilerplate.containers.Payroll.HumanResources.oldOrganization": "الادارة القديمة",
+  "boilerplate.containers.Payroll.HumanResources.newOrganization": "الادارة الجديدة",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "كود الموظف",
   "boilerplate.containers.Payroll.HumanResources.employeeInvestigation": "تحقيق مع موظف",
   "boilerplate.containers.Payroll.HumanResources.employeeName": "الموظف",
