finish add upload file into ResignReqTrx page , make value reformat in workingYears fielde in employeeData component, add defualt data in company and PayTemplate fields in ElementValHistory page

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1574,7 +1574,7 @@
   "boilerplate.containers.Payroll.Employee.personal.city": "المدينة",
   "boilerplate.containers.Payroll.Employee.personal.cmpFees": "قيمة الشركة",
   "boilerplate.containers.Payroll.Employee.personal.companyName": "شركة التأمين",
-  "boilerplate.containers.Payroll.Employee.personal.controlParameter": "نموذج القواعد",
+  "boilerplate.containers.Payroll.Employee.personal.controlParameter": "قاعدة الحضور",
   "boilerplate.containers.Payroll.Employee.personal.creatResign": "انشاء استقالة",
   "boilerplate.containers.Payroll.Employee.personal.department": "القسم",
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "كود الموظف",
@@ -2131,6 +2131,7 @@
   "boilerplate.containers.Payroll.pageUnderConstruction": "الصفحة تحت الانشاء",
   "boilerplate.containers.Payroll.resetDeviceKey": "إعادة ضبط مفتاح الجهاز",
   "boilerplate.containers.Payroll.InvalidIdNumber": "رقم الهوية غير صحيح",
+  "boilerplate.containers.Payroll.uploadFileErrorMes": "الملف كبير للغاية",
   "boilerplate.containers.Payroll.oldElemVal": "القيمة السابقة",
   "boilerplate.containers.Payroll.organizationName": "القسم",
   "boilerplate.containers.Payroll.organizationTree": "الهيكل التنظيمي للمنظمة",
