--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1573,7 +1573,7 @@
   "boilerplate.containers.Payroll.Employee.personal.city": "City",
   "boilerplate.containers.Payroll.Employee.personal.cmpFees": "Company Fees",
   "boilerplate.containers.Payroll.Employee.personal.companyName": "Medical Company",
-  "boilerplate.containers.Payroll.Employee.personal.controlParameter": "Rules Template",
+  "boilerplate.containers.Payroll.Employee.personal.controlParameter": "Attendance Rule",
   "boilerplate.containers.Payroll.Employee.personal.creatResign": "Create Resign",
   "boilerplate.containers.Payroll.Employee.personal.department": "Section",
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "Employee Code",
@@ -2130,6 +2130,7 @@
   "boilerplate.containers.Payroll.pageUnderConstruction": "Page Under Construction",
   "boilerplate.containers.Payroll.resetDeviceKey": "Reset Device Key",
   "boilerplate.containers.Payroll.InvalidIdNumber": "Invalid ID Number",
+  "boilerplate.containers.Payroll.uploadFileErrorMes": "The File Is too Large",
   "boilerplate.containers.Payroll.oldElemVal": "Prev Value",
   "boilerplate.containers.Payroll.organizationName": "Section",
   "boilerplate.containers.Payroll.organizationTree": "Organization Tree",
