--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1573,7 +1573,7 @@
   "boilerplate.containers.Payroll.Employee.personal.city": "المدينة",
   "boilerplate.containers.Payroll.Employee.personal.cmpFees": "قيمة الشركة",
   "boilerplate.containers.Payroll.Employee.personal.companyName": "شركة التأمين",
-  "boilerplate.containers.Payroll.Employee.personal.controlParameter": "نموذج القواعد",
+  "boilerplate.containers.Payroll.Employee.personal.controlParameter": "قاعدة الحضور",
   "boilerplate.containers.Payroll.Employee.personal.creatResign": "انشاء استقالة",
   "boilerplate.containers.Payroll.Employee.personal.department": "القسم",
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "كود الموظف",
@@ -2130,6 +2130,7 @@
   "boilerplate.containers.Payroll.pageUnderConstruction": "الصفحة تحت الانشاء",
   "boilerplate.containers.Payroll.resetDeviceKey": "إعادة ضبط مفتاح الجهاز",
   "boilerplate.containers.Payroll.InvalidIdNumber": "رقم البطاقة غير صحيح",
+  "boilerplate.containers.Payroll.uploadFileErrorMes": "الملف كبير للغاية",
   "boilerplate.containers.Payroll.oldElemVal": "القيمة السابقة",
   "boilerplate.containers.Payroll.organizationName": "القسم",
   "boilerplate.containers.Payroll.organizationTree": "الهيكل التنظيمي للمنظمة",
