finish create QNB Template and QNB Arabic Template in Bank list page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2193,6 +2193,7 @@
   "boilerplate.containers.Payroll.Payroll.elementTaxFreeLimit": "الحد الاقصى لاعفاء من الضريبة",
   "boilerplate.containers.Payroll.Payroll.elementType": "نوع العنصر",
   "boilerplate.containers.Payroll.Payroll.elementValColNum": "رقم العمود الذى يحتوى على القيمة",
+  "boilerplate.containers.Payroll.Payroll.exportSectionAndCode": "تصدير القسم والكود",
   "boilerplate.containers.Payroll.Payroll.ElementValCreateTitle": "اضافة عناصر للموظفين",
   "boilerplate.containers.Payroll.Payroll.ElementValUpdateTitle": "تعديل عناصر للموظفين",
   "boilerplate.containers.Payroll.Payroll.elemMaxMin": "قيمة العنصر له حد ادنى واقصى",
