--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -2132,6 +2132,7 @@
   "boilerplate.containers.Payroll.resetDeviceKey": "إعادة ضبط مفتاح الجهاز",
   "boilerplate.containers.Payroll.InvalidIdNumber": "رقم الهوية غير صحيح",
   "boilerplate.containers.Payroll.uploadFileErrorMes": "الملف كبير للغاية",
+  "boilerplate.containers.Payroll.toDateErrMess": "يجب عليك أن تختار الى تاريخ",
   "boilerplate.containers.Payroll.oldElemVal": "القيمة السابقة",
   "boilerplate.containers.Payroll.organizationName": "القسم",
   "boilerplate.containers.Payroll.organizationTree": "الهيكل التنظيمي للمنظمة",
