update shift , rules

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1090,6 +1090,9 @@
   "boilerplate.containers.Payroll.Attendance.lateTime": "اجمالى وقت التاخير بدون اذن",
   "boilerplate.containers.Payroll.Attendance.lateTimeEle": "عنصر جزاء التأخير",
   "boilerplate.containers.Payroll.Attendance.lateTimeMinusEl": "عتصر وقت التأخير",
+  "boilerplate.containers.Payroll.Attendance.breakElement": "عتصر وقت الراحة",
+  "boilerplate.containers.Payroll.Attendance.breakFactor": "قيمة وقت الراحة",
+  "boilerplate.containers.Payroll.Attendance.breakMinutes": "وقت الراحة",
   "boilerplate.containers.Payroll.Attendance.lateTimeMinusElVal": "قيمة العنصر المقابلة",
   "boilerplate.containers.Payroll.Attendance.lateTimeOnMonth": "احتساب التأخير على اجمالى الشهر",
   "boilerplate.containers.Payroll.Attendance.Latitude": "خطوط الطول",
