--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1090,6 +1090,9 @@
   "boilerplate.containers.Payroll.Attendance.lateTime": "Late Time",
   "boilerplate.containers.Payroll.Attendance.lateTimeEle": "Delay penalty element",
   "boilerplate.containers.Payroll.Attendance.lateTimeMinusEl": "Delay time element",
+  "boilerplate.containers.Payroll.Attendance.breakElement": "Break Element",
+  "boilerplate.containers.Payroll.Attendance.breakFactor": "Break Factor",
+  "boilerplate.containers.Payroll.Attendance.breakMinutes": "BreakMinutes",
   "boilerplate.containers.Payroll.Attendance.lateTimeMinusElVal": "corresponding element value",
   "boilerplate.containers.Payroll.Attendance.lateTimeOnMonth": "Calculate Late on Total Month",
   "boilerplate.containers.Payroll.Attendance.Latitude": "Latitude",
