--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1505,6 +1505,7 @@
   "boilerplate.containers.Payroll.Employee.branchNumber": "رقم الفرع",
   "boilerplate.containers.Payroll.Employee.businessUnit": "وحدات عمل",
   "boilerplate.containers.Payroll.Employee.birthDateValidationErrMess": "يجب ألا يقل العمر عن 16 عامًا",
+  "boilerplate.containers.Payroll.Employee.salute": "التحية",
   "boilerplate.containers.Payroll.Employee.car.carModel": "موديل السيارة",
   "boilerplate.containers.Payroll.Employee.car.hasLicense": "يوجد رخصة قيادة",
   "boilerplate.containers.Payroll.Employee.car.licenseGrade": "درجة الرخصة",
@@ -1557,7 +1558,7 @@
   "boilerplate.containers.Payroll.Employee.job.hiringSource": "مصدر التعيين",
   "boilerplate.containers.Payroll.Employee.job.isKinship": "يوجد صلة قرابة",
   "boilerplate.containers.Payroll.Employee.job.job": "الوظيفة",
-  "boilerplate.containers.Payroll.Employee.job.joblevel": "المستوى الوظيفى",
+  "boilerplate.containers.Payroll.Employee.job.joblevel": "الدرجات الوظيفية",
   "boilerplate.containers.Payroll.Employee.job.kinshipEmp": "اسم القريب",
   "boilerplate.containers.Payroll.Employee.job.kinshipLink": "صلة قرابة",
   "boilerplate.containers.Payroll.Employee.job.notHasMission": "لا يصرح له بمأموريات",
