--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1504,6 +1504,7 @@
   "boilerplate.containers.Payroll.Employee.branchNumber": "Branch Number",
   "boilerplate.containers.Payroll.Employee.businessUnit": "Business Unit",
   "boilerplate.containers.Payroll.Employee.birthDateValidationErrMess": "Age must to not be less than 16 years",
+  "boilerplate.containers.Payroll.Employee.salute": "Salute",
   "boilerplate.containers.Payroll.Employee.car.carModel": "Car Model",
   "boilerplate.containers.Payroll.Employee.car.hasLicense": "Has License",
   "boilerplate.containers.Payroll.Employee.car.licenseGrade": "License Grade",
