finish news icon with News Details page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -115,6 +115,8 @@
   "boilerplate.components.Header.user.logout": "تسجيل الخروج",
   "boilerplate.components.Header.user.profile": "ملفي الشخصي",
   "boilerplate.components.Header.user.task": "مهمتي",
+  "boilerplate.components.Header.noNews": "لا يوجد اخبار",
+  "boilerplate.components.Header.seeAll": "أظهر الكل",
   "boilerplate.components.Landing.banner.buy": "اشتري الآن",
   "boilerplate.components.Landing.banner.demo": "راجع العرض التوضيحي",
   "boilerplate.components.Landing.banner.subtitle": "React.js قالب مكدس كامل للمطور خبير وذوي الخبرة",
@@ -2995,6 +2997,7 @@
   "boilerplate.containers.Payroll.Yearly": "سنويا",
   "boilerplate.containers.Payroll.yearName": "السنة",
   "boilerplate.containers.Payroll.yes": "نعم",
+  "boilerplate.containers.Payroll.News": "الأخبار",
   "boilerplate.containers.Tables.Basic.bordered.desc": "القديم ذهب ، وهنا طاولة قديمة تحدها الموضة ، قمنا بتبديلها قليلاً حتى تبدو العناوين أكثر وضوحًا.",
   "boilerplate.containers.Tables.Basic.bordered.title": "جدول يحده",
   "boilerplate.containers.Tables.Basic.coloured.desc": "Description",
