--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -115,6 +115,8 @@
   "boilerplate.components.Header.user.logout": "Log Out",
   "boilerplate.components.Header.user.profile": "My Profile",
   "boilerplate.components.Header.user.task": "My Task",
+  "boilerplate.components.Header.noNews": "No News",
+  "boilerplate.components.Header.seeAll": "See All",
   "boilerplate.components.Landing.banner.buy": "Buy Now",
   "boilerplate.components.Landing.banner.demo": "See Demo",
   "boilerplate.components.Landing.banner.subtitle": "React.js full stack template for expert and experienced developer",
@@ -2994,6 +2996,7 @@
   "boilerplate.containers.Payroll.Yearly": "Yearly",
   "boilerplate.containers.Payroll.yearName": "Year",
   "boilerplate.containers.Payroll.yes": "Yes",
+  "boilerplate.containers.Payroll.News": "News",
   "boilerplate.containers.Tables.Basic.bordered.desc": "Old is gold, here is old fashion bordered table, we tweaked it a bit so that the headings looks more prominent.",
   "boilerplate.containers.Tables.Basic.bordered.title": "Bordered Table",
   "boilerplate.containers.Tables.Basic.coloured.desc": "Description",
