--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -2205,6 +2205,7 @@
   "boilerplate.containers.Payroll.Payroll.elementType": "نوع العنصر",
   "boilerplate.containers.Payroll.Payroll.elementValColNum": "رقم العمود الذى يحتوى على القيمة",
   "boilerplate.containers.Payroll.Payroll.exportSectionAndCode": "تصدير القسم والكود",
+  "boilerplate.containers.Payroll.Payroll.joblevel": "الدرجات الوظيفية",
   "boilerplate.containers.Payroll.Payroll.ElementValCreateTitle": "اضافة عناصر للموظفين",
   "boilerplate.containers.Payroll.Payroll.ElementValUpdateTitle": "تعديل عناصر للموظفين",
   "boilerplate.containers.Payroll.Payroll.elemMaxMin": "قيمة العنصر له حد ادنى واقصى",
