Add Insert user in Approval

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1051,6 +1051,7 @@
   "boilerplate.containers.Payroll.Attendance.hoursPerDay": "ساعات العمل المطلوبة فى اليوم",
   "boilerplate.containers.Payroll.Attendance.id": "الهوية",
   "boilerplate.containers.Payroll.Attendance.idealManPower": "قوة العمالة المخططه",
+  "boilerplate.containers.Payroll.Attendance.insDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.Attendance.IncludeLeavesAndShiftLeaves": "يشمل الاجازات و اجازات الدوامات",
   "boilerplate.containers.Payroll.Attendance.includingEmployeesWithoutAttendanceRule": "يشمل الموظفين الذين لا تنطبق عليهم القواعد",
   "boilerplate.containers.Payroll.Attendance.detailedAttendanceWeekend": "راحة",
@@ -2264,6 +2265,7 @@
   "boilerplate.containers.Payroll.Payroll.MedInsElement": "عنصر خصم التأمين",
   "boilerplate.containers.Payroll.Payroll.min": "الحد الادنى",
   "boilerplate.containers.Payroll.Payroll.minDailyWorkHours": "الحد الادنى لساعات العمل",
+  "boilerplate.containers.Payroll.Payroll.insDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.Payroll.month": "الشهر",
   "boilerplate.containers.Payroll.Payroll.Month": "الشهر",
   "boilerplate.containers.Payroll.Payroll.monthly": "شهري",
@@ -2729,6 +2731,7 @@
   "boilerplate.containers.Payroll.todate": "الى تاريخ",
   "boilerplate.containers.Payroll.total": "الاجمالى",
   "boilerplate.containers.Payroll.totalvalue": "اجمالى القسط",
+  "boilerplate.containers.Payroll.training.insDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.training.addEmptoTraining": "اضافة موظف لتدريب",
   "boilerplate.containers.Payroll.training.approvedEmp": "صاحب القرار",
   "boilerplate.containers.Payroll.training.attendanceDate": "تاريخ الحضور",
@@ -2806,10 +2809,12 @@
   "boilerplate.containers.Payroll.transportaion.devicePass": "كلمة المرور",
   "boilerplate.containers.Payroll.transportaion.DeviceUpdateTitle": "تعديل اجهزة الحضور والانصراف",
   "boilerplate.containers.Payroll.transportaion.ip": "النقل",
+  "boilerplate.containers.Payroll.insDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.trxId": "كود الحركة",
   "boilerplate.containers.Payroll.tuesday": "الثلاثاء",
   "boilerplate.containers.Payroll.type": "النوع",
   "boilerplate.containers.Payroll.Upload": "رفع",
+  "boilerplate.containers.Payroll.vac.insDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.vac.address": "العنوان",
   "boilerplate.containers.Payroll.vac.allowedAfterMonthNo": "مسموح به بعد عدد شهور",
   "boilerplate.containers.Payroll.vac.alternativeEmployee": "الموظف البديل",
