--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1051,6 +1051,7 @@
   "boilerplate.containers.Payroll.Attendance.hoursPerDay": "Work hours required per day",
   "boilerplate.containers.Payroll.Attendance.id": "ID",
   "boilerplate.containers.Payroll.Attendance.idealManPower": "ideal ManPower",
+  "boilerplate.containers.Payroll.Attendance.insDate": "Insert Date",
   "boilerplate.containers.Payroll.Attendance.IncludeLeavesAndShiftLeaves": "Include Leaves And Shift Leaves",
   "boilerplate.containers.Payroll.Attendance.includingEmployeesWithoutAttendanceRule": "Including Employees Without Attendance Rule",
   "boilerplate.containers.Payroll.Attendance.detailedAttendanceWeekend": "Weekend",
@@ -2263,6 +2264,7 @@
   "boilerplate.containers.Payroll.Payroll.MedInsElement": "Medical Ins Element",
   "boilerplate.containers.Payroll.Payroll.min": "Minimum",
   "boilerplate.containers.Payroll.Payroll.minDailyWorkHours": "min Daily WorkHours",
+  "boilerplate.containers.Payroll.Payroll.insDate": "Insert Date",
   "boilerplate.containers.Payroll.Payroll.month": "Month",
   "boilerplate.containers.Payroll.Payroll.Month": "Month",
   "boilerplate.containers.Payroll.Payroll.monthly": "Monthly",
@@ -2728,6 +2730,7 @@
   "boilerplate.containers.Payroll.todate": "To Date",
   "boilerplate.containers.Payroll.total": "Total",
   "boilerplate.containers.Payroll.totalvalue": "Total Loan",
+  "boilerplate.containers.Payroll.training.insDate": "Insert Date",
   "boilerplate.containers.Payroll.training.addEmptoTraining": "Add Employee to Training",
   "boilerplate.containers.Payroll.training.approvedEmp": "approvedEmp",
   "boilerplate.containers.Payroll.training.attendanceDate": "Attendance Date",
@@ -2805,10 +2808,12 @@
   "boilerplate.containers.Payroll.transportaion.devicePass": "Device Password",
   "boilerplate.containers.Payroll.transportaion.DeviceUpdateTitle": "Update Device",
   "boilerplate.containers.Payroll.transportaion.ip": "Transportaion",
+  "boilerplate.containers.Payroll.insDate": "Insert Date",
   "boilerplate.containers.Payroll.trxId": "Trx No",
   "boilerplate.containers.Payroll.tuesday": "Tuesday",
   "boilerplate.containers.Payroll.type": "Type",
   "boilerplate.containers.Payroll.Upload": "Upload",
+  "boilerplate.containers.Payroll.vac.insDate": "Insert Date",
   "boilerplate.containers.Payroll.vac.address": "Address",
   "boilerplate.containers.Payroll.vac.allowedAfterMonthNo": "Allowed After Month Number",
   "boilerplate.containers.Payroll.vac.alternativeEmployee": "Alternative Employee",
