--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1744,6 +1744,7 @@
   "boilerplate.containers.Payroll.hiringDateNo": "من تاريخ التعيين",
   "boilerplate.containers.Payroll.hrLetterDate": "تاريخ الخطاب",
   "boilerplate.containers.Payroll.hrLetterLang": "لغة الخطاب",
+  "boilerplate.containers.Payroll.HumanResources.insDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.HumanResources.a": "ج",
   "boilerplate.containers.Payroll.HumanResources.actualManPower": "عدد العاملين",
   "boilerplate.containers.Payroll.HumanResources.add": "اضافة",
