--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1743,6 +1743,7 @@
   "boilerplate.containers.Payroll.hiringDateNo": "Hiring Date No",
   "boilerplate.containers.Payroll.hrLetterDate": "Letter Date",
   "boilerplate.containers.Payroll.hrLetterLang": "Letter Language",
+  "boilerplate.containers.Payroll.HumanResources.insDate": "Insert Date",
   "boilerplate.containers.Payroll.HumanResources.a": "A",
   "boilerplate.containers.Payroll.HumanResources.actualManPower": "Actual ManPower",
   "boilerplate.containers.Payroll.HumanResources.add": "Add New",
