--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -2624,6 +2624,7 @@
   "boilerplate.containers.Payroll.Setting.employeeName": "اسم الموظف",
   "boilerplate.containers.Payroll.Setting.favorites": "المفضلة",
   "boilerplate.containers.Payroll.Setting.filterMess": "يجب عليك تحديد اسم الموظف أو اسم المستخدم",
+  "boilerplate.containers.Payroll.Setting.notAllowedEmployees": "الموظفين الغير المسموح لهم",
   "boilerplate.containers.Payroll.Setting.fontSize": "حجم النص",
   "boilerplate.containers.Payroll.Setting.formTypeName": "اسم نوع النموذج",
   "boilerplate.containers.Payroll.Setting.fromDate": "من تاريخ",
@@ -3009,6 +3010,7 @@
   "boilerplate.containers.Payroll.yearName": "السنة",
   "boilerplate.containers.Payroll.yes": "نعم",
   "boilerplate.containers.Payroll.News": "الأخبار",
+  "boilerplate.containers.Payroll.selectPayrollEmployee": "اختر موظف الرواتب",
   "boilerplate.containers.Payroll.transactionDate": "تاريخ التسجيل",
   "boilerplate.containers.Tables.Basic.bordered.desc": "القديم ذهب ، وهنا طاولة قديمة تحدها الموضة ، قمنا بتبديلها قليلاً حتى تبدو العناوين أكثر وضوحًا.",
   "boilerplate.containers.Tables.Basic.bordered.title": "جدول يحده",
