--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2623,6 +2623,7 @@
   "boilerplate.containers.Payroll.Setting.employeeName": "Employee Name",
   "boilerplate.containers.Payroll.Setting.favorites": "Favorites",
   "boilerplate.containers.Payroll.Setting.filterMess": "You must to select employee name or user name",
+  "boilerplate.containers.Payroll.Setting.notAllowedEmployees": "Not Allowed Employees",
   "boilerplate.containers.Payroll.Setting.fontSize": "Font Size",
   "boilerplate.containers.Payroll.Setting.formTypeName": "Form Type Name",
   "boilerplate.containers.Payroll.Setting.fromDate": "From Date",
@@ -3008,6 +3009,7 @@
   "boilerplate.containers.Payroll.yearName": "Year",
   "boilerplate.containers.Payroll.yes": "Yes",
   "boilerplate.containers.Payroll.News": "News",
+  "boilerplate.containers.Payroll.selectPayrollEmployee": "Select Payroll Employee",
   "boilerplate.containers.Payroll.transactionDate": "Transaction Date",
   "boilerplate.containers.Tables.Basic.bordered.desc": "Old is gold, here is old fashion bordered table, we tweaked it a bit so that the headings looks more prominent.",
   "boilerplate.containers.Tables.Basic.bordered.title": "Bordered Table",
