--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1918,6 +1918,8 @@
   "boilerplate.containers.Payroll.insurance.endDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.insurance.enName": "الاسم بالانجليزية",
   "boilerplate.containers.Payroll.insurance.existInsurance": "تم الخروج من التأمين",
+  "boilerplate.containers.Payroll.insurance.orgnizationErrMess": "يجب عليك اختيار المنظمة",
+  "boilerplate.containers.Payroll.insurance.form1Insurance": "نموذج رقم 1 طلب اشتراك مؤمن عليه",
   "boilerplate.containers.Payroll.insurance.gender": "النوع",
   "boilerplate.containers.Payroll.insurance.government": "المحافظة",
   "boilerplate.containers.Payroll.insurance.grossSalary": "الراتب الشامل",
