--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1917,6 +1917,8 @@
   "boilerplate.containers.Payroll.insurance.endDate": "End Date",
   "boilerplate.containers.Payroll.insurance.enName": "English Name",
   "boilerplate.containers.Payroll.insurance.existInsurance": "Exist Insurance",
+  "boilerplate.containers.Payroll.insurance.orgnizationErrMess": "You should to choose organization",
+  "boilerplate.containers.Payroll.insurance.form1Insurance": "Insurance Report Form 1",
   "boilerplate.containers.Payroll.insurance.gender": "Gender",
   "boilerplate.containers.Payroll.insurance.government": "Government",
   "boilerplate.containers.Payroll.insurance.grossSalary": "Gross Salary",
