--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -3013,6 +3013,7 @@
   "boilerplate.containers.Payroll.yes": "نعم",
   "boilerplate.containers.Payroll.News": "الأخبار",
   "boilerplate.containers.Payroll.selectPayrollEmployee": "اختر موظف الرواتب",
+  "boilerplate.containers.Payroll.invalidUser": "مستخدم غير صالح",
   "boilerplate.containers.Payroll.transactionDate": "تاريخ التسجيل",
   "boilerplate.containers.Tables.Basic.bordered.desc": "القديم ذهب ، وهنا طاولة قديمة تحدها الموضة ، قمنا بتبديلها قليلاً حتى تبدو العناوين أكثر وضوحًا.",
   "boilerplate.containers.Tables.Basic.bordered.title": "جدول يحده",
