--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -3012,6 +3012,7 @@
   "boilerplate.containers.Payroll.yes": "Yes",
   "boilerplate.containers.Payroll.News": "News",
   "boilerplate.containers.Payroll.selectPayrollEmployee": "Select Payroll Employee",
+  "boilerplate.containers.Payroll.invalidUser": "Invalid User",
   "boilerplate.containers.Payroll.transactionDate": "Transaction Date",
   "boilerplate.containers.Tables.Basic.bordered.desc": "Old is gold, here is old fashion bordered table, we tweaked it a bit so that the headings looks more prominent.",
   "boilerplate.containers.Tables.Basic.bordered.title": "Bordered Table",
