finish add new fields in create Promotions page and list page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1844,6 +1844,7 @@
   "boilerplate.containers.Payroll.HumanResources.planedManPower": "قوة العمالة المخططة",
   "boilerplate.containers.Payroll.HumanResources.PromotionsCreateTitle": "اضافة ترقية",
   "boilerplate.containers.Payroll.HumanResources.PromotionsUpdateTitle": "تعديل ترقية",
+  "boilerplate.containers.Payroll.HumanResources.actualPromotionDate": " تاريخ الترقيه الفعلي",
   "boilerplate.containers.Payroll.HumanResources.q": "س",
   "boilerplate.containers.Payroll.HumanResources.quantity": "الكمية",
   "boilerplate.containers.Payroll.HumanResources.Question": "السؤال",
